<resources>
    <string name="app_name">My Parking</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="avatar">TODO</string>
    <string name="www_facebook_com_myparking">www.facebook.com/MyParking</string>
    <string name="www_istagram_com_my_parking">www.istagram.com/My.Parking</string>
    <string name="parkingappfste_gmail_com">parkingappfste@gmail.com</string>
    <string name="avatar2">TODO</string>
    <string name="logoabout">TODO</string>
    <string name="facebook">TODO</string>
    <string name="gmail">TODO</string>
    <string name="instagram">TODO</string>
</resources>
